fixing nav on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -637,3 +637,6 @@ hr {
 .page-section {
   padding-top: 50px;
 }
+.navbar-collapse.in {
+  overflow-y: visible;
+}
