--- a/less/custom.less
+++ b/less/custom.less
@@ -279,3 +279,6 @@ hr {
 .page-section {
     padding-top: 50px;
 }
+.navbar-collapse.in {
+    overflow-y: visible;
+}
